WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188906
Don't launch network process in WebCookieManagerProxy::setHTTPCookieAcceptPolicy
https://bugs.webkit.org/show_bug.cgi?id=188906
Summary
Don't launch network process in WebCookieManagerProxy::setHTTPCookieAcceptPolicy
Sihui Liu
Reported
2018-08-23 16:01:07 PDT
In WebCookieManagerProxy::setHTTPCookieAcceptPolicy, we persist the cookieAcceptPolicy of sharedCookieStorage. When we launch the network process later, we pass the sharedCookieStorage to network process, so network process has the correct cookieAcceptPolicy. Therefore, we don't have to launch the network process and send the setting message if the network process is not launched.
Attachments
Patch
(1.99 KB, patch)
2018-08-23 16:06 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch
(1.69 KB, patch)
2018-08-24 15:03 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2018-08-23 16:01:22 PDT
<
rdar://problem/42875795
>
Sihui Liu
Comment 2
2018-08-23 16:01:58 PDT
<
rdar://problem/43539661
>
Sihui Liu
Comment 3
2018-08-23 16:06:57 PDT
Created
attachment 347966
[details]
Patch
Geoffrey Garen
Comment 4
2018-08-24 10:02:04 PDT
Comment on
attachment 347966
[details]
Patch r=me
WebKit Commit Bot
Comment 5
2018-08-24 10:46:08 PDT
Comment on
attachment 347966
[details]
Patch Clearing flags on attachment: 347966 Committed
r235321
: <
https://trac.webkit.org/changeset/235321
>
WebKit Commit Bot
Comment 6
2018-08-24 10:46:09 PDT
All reviewed patches have been landed. Closing bug.
Sihui Liu
Comment 7
2018-08-24 15:01:58 PDT
Failed to invoke the callback in early return.
Sihui Liu
Comment 8
2018-08-24 15:03:59 PDT
Created
attachment 348044
[details]
Patch
WebKit Commit Bot
Comment 9
2018-08-24 17:39:38 PDT
Comment on
attachment 348044
[details]
Patch Rejecting
attachment 348044
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 348044, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as
commit-queue@webkit.org
... Fetching:
https://bugs.webkit.org/attachment.cgi?id=348044&action=edit
Fetching:
https://bugs.webkit.org/show_bug.cgi?id=188906
&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Updating working directory Processing patch 348044 from
bug 188906
. Fetching:
https://bugs.webkit.org/attachment.cgi?id=348044
Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to
http://svn.webkit.org/repository/webkit/trunk
... M Source/WebKit/ChangeLog M Source/WebKit/UIProcess/WebCookieManagerProxy.cpp ERROR from SVN: A repository hook failed: Commit blocked by pre-commit hook (exit code 1) with output: Commits are currently disabled while we update infrastructure. W: f06372109b0ab3aa050594c410308ffe25d059a4 and refs/remotes/origin/master differ, using rebase: :040000 040000 a30ae21dc76e281b437ed3a04bfed4ace20e83db 162abbfb909fd78b90c6722de4a4368f8d472b8a M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to
http://svn.webkit.org/repository/webkit/trunk
... M Source/WebKit/ChangeLog M Source/WebKit/UIProcess/WebCookieManagerProxy.cpp ERROR from SVN: A repository hook failed: Commit blocked by pre-commit hook (exit code 1) with output: Commits are currently disabled while we update infrastructure. W: f06372109b0ab3aa050594c410308ffe25d059a4 and refs/remotes/origin/master differ, using rebase: :040000 040000 a30ae21dc76e281b437ed3a04bfed4ace20e83db 162abbfb909fd78b90c6722de4a4368f8d472b8a M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource Current branch master is up to date. Full output:
https://webkit-queues.webkit.org/results/8977477
WebKit Commit Bot
Comment 10
2018-08-27 09:43:30 PDT
Comment on
attachment 348044
[details]
Patch Clearing flags on attachment: 348044 Committed
r235374
: <
https://trac.webkit.org/changeset/235374
>
WebKit Commit Bot
Comment 11
2018-08-27 09:43:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug